--- a/TP2/src/app/components/pages/for-playing/for-playing.component.css
+++ b/TP2/src/app/components/pages/for-playing/for-playing.component.css
@@ -58,17 +58,40 @@
     position: absolute;
 }
 
+div.image,
+div.image_one {
+    display: contents;
+    position: absolute;
+}
+
+div.image img,
+div.image_one img {
+    animation-duration: 3s;
+    animation-name: slideIn;
+    transform-origin: center bottom;
+    animation-iteration-count: 1;
+    scroll-snap-align: center;
+}
+
 .multimedia-flex {
     display: flex;
     gap: var(--space-x-small);
     position: relative;
     overflow-x: scroll;
-    scroll-snap-type: x mandatory;
 }
 
 .multimedia-flex img {
-    max-width: 100%;
-    max-height: 100%;
-    display: block;
-    scroll-snap-align: center;
+    max-width: 80%;
+    max-height: 80%;
+}
+
+@keyframes slideIn {
+    from {
+        margin-left: 100%;
+        opacity: 0;
+    }
+    to {
+        margin-left: 0%;
+        opacity: 1;
+    }
 }
