--- a/TP2/src/app/components/pages/for-playing/for-playing.component.html
+++ b/TP2/src/app/components/pages/for-playing/for-playing.component.html
@@ -26,8 +26,8 @@
 
         <app-tab-content *ngIf="tabSelected == 2">
             <ul class="instructions">
-                <li>Un toque: saltar</li>
-                <li>Doble toque: salto largo</li>
+                <li><b>Un toque:</b> saltar</li>
+                <li><b>Dos toques:</b> salto largo</li>
             </ul>
         </app-tab-content>
 
@@ -40,13 +40,23 @@
                 </div>
             </div>
             <div class="multimedia">
-                <p>Multimedia</p>
+                <p>Imágenes</p>
                 <div #scrollTarget class="multimedia-flex">
-                    <img src="assets/images/infantiles/3pandasenjaponmultimedia3.jpg" alt="image3" />
-                    <img src="assets/images/infantiles/3pandasenjaponmultimedia4.jpg" alt="image4" />
-                    <img src="assets/images/infantiles/3pandasenjaponmultimedia5.jpg" alt="image5" />
-                    <img src="assets/images/infantiles/3pandasenjaponmultimedia6.jpeg" alt="image6" />
-                    <img src="assets/images/infantiles/3pandasenjaponmultimedia7.jpg" alt="image7" />
+                    <div class="image_one">
+                        <img src="assets/images/infantiles/3pandasenjaponmultimedia3.jpg" alt="image3" />
+                    </div>
+                    <div class="image two">
+                        <img src="assets/images/infantiles/3pandasenjaponmultimedia4.jpg" alt="image4" />
+                    </div>
+                    <div class="image three">
+                        <img src="assets/images/infantiles/3pandasenjaponmultimedia5.jpg" alt="image5" />
+                    </div>
+                    <div class="image four">
+                        <img src="assets/images/infantiles/3pandasenjaponmultimedia6.jpeg" alt="image6" />
+                    </div>
+                    <div class="image five">
+                        <img src="assets/images/infantiles/3pandasenjaponmultimedia7.jpg" alt="image7" />
+                    </div>
                 </div>
             </div>
         </app-tab-content>
