Added automation animation for test in for-playing page

--- a/TP2/src/app/components/atoms/tab-content/tab-content.component.css
+++ b/TP2/src/app/components/atoms/tab-content/tab-content.component.css
@@ -1,7 +1,8 @@
 .tab-content {
-	background-color: var(--primary-dark-2);
-	color: var(--white);
-	border-bottom-left-radius: 5px;
-	border-bottom-right-radius: 5px;
-	padding: var(--space-small);
+    background-color: var(--primary-dark-2);
+    color: var(--white);
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    padding: var(--space-small);
+    overflow: hidden;
 }
