--- a/TP2/src/app/components/atoms/card-game/card-game.component.html
+++ b/TP2/src/app/components/atoms/card-game/card-game.component.html
@@ -5,5 +5,5 @@
 		[src]="src"
 		alt="game"
 	/>
-	<p class="name body">{{ name }}</p>
+	<p [innerHTML]="getNameText()" class="name body"></p>
 </div>
