--- a/TP2/src/app/components/pages/playing/playing.component.css
+++ b/TP2/src/app/components/pages/playing/playing.component.css
@@ -1,81 +1,81 @@
 .playing {
-    height: 100%;
-    width: 100%;
-    position: relative;
+	height: 100%;
+	width: 100%;
+	position: relative;
 }
 
 img {
-    width: 100%;
-    height: 100%;
-    z-index: -1;
+	/* width: 100%; */
+	height: 100vh;
+	z-index: -1;
 }
 
 .back,
 .question {
-    font-size: 2.5rem;
-    position: absolute;
-    right: 16px;
-    top: 0;
-    transform: rotate(90deg);
+	font-size: 2.5rem;
+	position: absolute;
+	right: 16px;
+	top: 0;
+	transform: rotate(90deg);
 }
 
 .question {
-    top: 50px;
+	top: 50px;
 }
 
 .help-overlay {
-    position: absolute;
-    transform: rotate(90deg);
-    top: 20%;
-    left: 35%;
-    width: 250px;
-    height: 15%;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    background-color: var(--primary-light-2);
-    color: var(--primary-dark-1);
-    padding-left: var(--space-large);
-    z-index: 600;
-    border-radius: 20px 20px 20px 20px;
-    box-shadow: var(--elevation-16dp);
+	position: absolute;
+	transform: rotate(90deg);
+	top: 20%;
+	left: 35%;
+	width: 250px;
+	height: 15%;
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
+	background-color: var(--primary-light-2);
+	color: var(--primary-dark-1);
+	padding-left: var(--space-large);
+	z-index: 600;
+	border-radius: 20px 20px 20px 20px;
+	box-shadow: var(--elevation-16dp);
 }
 
 .help-overlay-container .title {
-    margin-bottom: var(--space-small);
+	margin-bottom: var(--space-small);
 }
 
 .close {
-    font-size: 2.5rem;
-    position: absolute;
-    right: 16px;
-    top: 0;
-    cursor: pointer;
+	font-size: 2.5rem;
+	position: absolute;
+	right: 16px;
+	top: 0;
+	cursor: pointer;
 }
 
-@media(min-width: 1024px) {
-    .playing {
-        position: relative;
-        display: flex;
-        justify-content: center;
-    }
-    img {
-        width: auto;
-        height: auto;
-        z-index: -1;
-        transform: rotate(-90deg);
-    }
-    .back,
-    .question {
-        transform: rotate(0);
-        font-size: 2.5rem;
-        position: absolute;
-        left: 16px;
-        top: 120px;
-        cursor: pointer;
-        transform: translateX(430px);
-    }
-    .question {
-        left: 60px;
-    }
+@media (min-width: 1024px) {
+	.playing {
+		position: relative;
+		display: flex;
+		justify-content: center;
+	}
+	img {
+		width: auto;
+		height: auto;
+		z-index: -1;
+		transform: rotate(-90deg);
+	}
+	.back,
+	.question {
+		transform: rotate(0);
+		font-size: 2.5rem;
+		position: absolute;
+		left: 16px;
+		top: 120px;
+		cursor: pointer;
+		transform: translateX(430px);
+	}
+	.question {
+		left: 60px;
+	}
 }
