Added favorites service and functionality to for-playing

--- a/TP2/src/app/components/atoms/card-favorites/card-favorites.component.html
+++ b/TP2/src/app/components/atoms/card-favorites/card-favorites.component.html
@@ -1,8 +1,11 @@
 <div class="card-favorites">
-    <img [src]="src" alt="game" />
-    <div class="container-fav">
-        <p class="name body">{{ name }}</p>
-        <app-icon name="delete" [width]="29"></app-icon>
-    </div>
-
+	<img [src]="src" alt="game" />
+	<div class="container-fav">
+		<p class="name body">{{ name }}</p>
+		<app-icon
+			(click)="removeFavorite()"
+			name="delete"
+			[width]="29"
+		></app-icon>
+	</div>
 </div>
