--- a/TP2/src/app/components/atoms/overlay/overlay.component.css
+++ b/TP2/src/app/components/atoms/overlay/overlay.component.css
@@ -1,4 +1,27 @@
-.overlay {
+.container-overlay {
+	display: flex;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	justify-content: center;
+	align-items: center;
+	z-index: 2;
+}
+
+.opacity-overlay {
+	background-color: var(--black);
+	opacity: 0.9;
+	position: absolute;
+	top: 90px;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 3;
+}
+
+.content {
 	background-color: var(--primary-light-2);
 	color: var(--primary-dark-2);
 	border-radius: 0 0 20px 20px;
@@ -6,7 +29,12 @@
 	box-shadow: var(--elevation-4dp);
 	position: absolute;
 	width: 100%;
-	z-index: 2;
+	top: 90px;
+	z-index: 4;
+}
+
+.overlay-right {
+	right: 0;
 }
 
 .close {
@@ -18,10 +46,7 @@
 }
 
 @media (min-width: 1024px) {
-	.overlay {
+	.content {
 		width: 300px;
-	}
-	.overlay-right {
-		right: 0;
 	}
 }
