--- a/TP2/src/app/components/atoms/dropdown/dropdown.component.css
+++ b/TP2/src/app/components/atoms/dropdown/dropdown.component.css
@@ -1,35 +1,47 @@
 p {
-	display: flex;
-	align-items: center;
+    display: flex;
+    align-items: center;
+}
+
+.dropdown p.title-dropdown {
+    height: 64.2px;
+    padding-left: 4px;
 }
 
 .dropdown {
-	position: relative;
-	display: inline-block;
+    position: relative;
+    display: inline-block;
 }
 
 .dropdown-content {
-	display: none;
-	position: absolute;
-	background-color: var(--primary-light-2);
-	min-width: 160px;
-	overflow: auto;
-	box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-	z-index: 1;
+    display: none;
+    position: absolute;
+    background-color: var(--primary-light-2);
+    min-width: 160px;
+    overflow: auto;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
 }
 
 .dropdown-item {
-	color: var(--black);
-	padding: var(--space-small) var(--space-large);
-	display: block;
-	text-align: left;
+    color: var(--black);
+    padding: var(--space-small) var(--space-large);
+    display: block;
+    text-align: left;
 }
 
 .dropdown-item:hover {
-	background-color: var(--primary-dark-1);
-	color: var(--white);
+    background-color: var(--primary-dark-1);
+    color: var(--white);
 }
 
 .dropdown:hover .dropdown-content {
-	display: block;
+    display: block;
+}
+
+.dropdown:hover {
+    background-color: var(--primary-dark-1);
+    color: var(--white);
+    border-radius: 10px;
+    box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
 }
