--- a/TP2/src/app/components/molecules/header/header.component.css
+++ b/TP2/src/app/components/molecules/header/header.component.css
@@ -94,14 +94,21 @@ li.category:first-child {
         margin-bottom: auto;
         cursor: pointer;
     }
+    div.link.home {
+        margin: 0;
+        height: auto;
+        display: flex;
+        justify-content: center;
+    }
+    .menu-category {
+        justify-content: center;
+        height: auto;
+    }
     .menu.desktop {
         display: flex;
         width: 30%;
         justify-content: baseline;
-    }
-    .menu-category:hover,
-    .link.home:hover {
-        color: var(--secondary-dark-2);
+        gap: var(--space-small);
     }
     .link.home {
         margin-right: var(--space-large);
@@ -117,5 +124,11 @@ li.category:first-child {
     }
     .profile-overlay p:hover li:hover {
         color: var(--secondary);
+    }
+    div.link.home:hover {
+        background-color: var(--primary-dark-1);
+        color: var(--white);
+        border-radius: 10px;
+        box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
     }
 }
