--- a/TP2/src/app/components/pages/for-playing/for-playing.component.html
+++ b/TP2/src/app/components/pages/for-playing/for-playing.component.html
@@ -8,22 +8,32 @@
 			</span>
 		</div>
 		<div class="right">
+			<app-icon
+				tabindex="0"
+				class="scale-animation"
+				(click)="toggleLike('like')"
+				name="{{ like == true ? 'like-fill' : 'like' }}"
+				[width]="24"
+			></app-icon>
+			<app-icon
+				tabindex="0"
+				class="scale-animation"
+				(click)="toggleLike('dislike')"
+				name="{{ like == false ? 'dislike-fill' : 'dislike' }}"
+				[width]="24"
+			></app-icon>
 			<app-icon name="share" [width]="24"></app-icon>
 			<app-icon
-				*ngIf="!isFavorite"
-				name="favorites-empty"
+				tabindex="0"
+				class="scale-animation"
+				name="{{ isFavorite ? 'favorites-fill' : 'favorites-empty' }}"
 				[width]="24"
 				[routerLink]="!isLoggedIn() ? ['/crear-cuenta'] : []"
 				(click)="toggleFavorite()"
 			></app-icon>
-			<app-icon
-				*ngIf="isFavorite"
-				(click)="toggleFavorite()"
-				name="favorites-fill"
-				[width]="24"
-			></app-icon>
 		</div>
 	</div>
+
 	<h1>3 pandas en Japón</h1>
 	<div class="image-container">
 		<app-button
@@ -38,6 +48,7 @@
 			[width]="328"
 		></app-card-game>
 	</div>
+
 	<div class="tabs-container">
 		<app-tabs-header [(tabSelected)]="tabSelected"></app-tabs-header>
 
