Fixed margins on header desktop elements

--- a/TP2/src/app/components/atoms/dropdown/dropdown.component.css
+++ b/TP2/src/app/components/atoms/dropdown/dropdown.component.css
@@ -5,7 +5,8 @@ p {
 
 .dropdown p.title-dropdown {
     height: 64.2px;
-    padding-left: 4px;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 .dropdown {
