--- a/TP2/src/app/components/molecules/header/header.component.css
+++ b/TP2/src/app/components/molecules/header/header.component.css
@@ -110,9 +110,6 @@ li.category:first-child {
         justify-content: baseline;
         gap: var(--space-small);
     }
-    .link.home {
-        margin-right: var(--space-large);
-    }
     .left {
         display: flex;
         align-items: center;
@@ -130,5 +127,9 @@ li.category:first-child {
         color: var(--white);
         border-radius: 10px;
         box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
+    }
+    .link.home.h4 {
+        margin-left: 10px;
+        margin-right: 10px;
     }
 }
