Improved playing component, refactor how-to-play in component and minor fixes

--- a/TP2/src/app/components/pages/for-playing/for-playing.component.html
+++ b/TP2/src/app/components/pages/for-playing/for-playing.component.html
@@ -60,10 +60,7 @@
 		</app-tab-content>
 
 		<app-tab-content *ngIf="tabSelected == 2">
-			<ul class="instructions">
-				<li><b>Un toque:</b> saltar</li>
-				<li><b>Dos toques:</b> salto largo</li>
-			</ul>
+			<app-how-to-play></app-how-to-play>
 		</app-tab-content>
 
 		<app-tab-content *ngIf="tabSelected == 3">
