--- a/TP2/src/app/components/atoms/overlay/overlay.component.css
+++ b/TP2/src/app/components/atoms/overlay/overlay.component.css
@@ -21,6 +21,10 @@
 	z-index: 3;
 }
 
+.opacity-overlay-help {
+	top: 0;
+}
+
 .content {
 	background-color: var(--primary-light-2);
 	color: var(--primary-dark-2);
@@ -37,12 +41,26 @@
 	right: 0;
 }
 
+.overlay-help {
+	top: calc(var(--space-x-small) + 30px + var(--space-medium));
+	left: calc(var(--space-medium));
+	width: calc(100% - 2 * var(--space-medium));
+}
+
 .close {
 	font-size: 2.5rem;
 	position: absolute;
 	right: 16px;
 	top: 0;
 	cursor: pointer;
+}
+
+@media (min-width: 600px) {
+	.overlay-help {
+		top: calc(var(--space-x-small) + 30px + var(--space-medium));
+		left: calc(var(--space-medium));
+		width: 300px;
+	}
 }
 
 @media (min-width: 1024px) {
