--- a/TP2/src/app/components/pages/playing/playing.component.css
+++ b/TP2/src/app/components/pages/playing/playing.component.css
@@ -1,81 +1,57 @@
 .playing {
-	height: 100%;
+	height: 100vh;
 	width: 100%;
 	position: relative;
+	display: flex;
+	align-items: center;
 }
 
 img {
-	/* width: 100%; */
-	height: 100vh;
-	z-index: -1;
+	width: 100%;
+}
+
+.icons-container {
+	display: flex;
+	gap: var(--space-medium);
+	position: absolute;
+	top: var(--space-small);
+	left: var(--space-medium);
+}
+
+.opacity {
+	position: absolute;
+	background-color: var(--black);
+	opacity: 0.7;
+	width: 30px;
+	height: 30px;
+	border-radius: 20px;
+}
+
+.opacity-back {
+	top: 0;
+	left: 0;
+}
+
+.opacity-question {
+	top: 0;
+	left: calc(30px + var(--space-medium));
 }
 
 .back,
 .question {
-	font-size: 2.5rem;
-	position: absolute;
-	right: 16px;
-	top: 0;
-	transform: rotate(90deg);
+	z-index: 5;
 }
 
 .question {
 	top: 50px;
 }
 
-.help-overlay {
-	position: absolute;
-	transform: rotate(90deg);
-	top: 20%;
-	left: 35%;
-	width: 250px;
-	height: 15%;
-	display: flex;
-	justify-content: center;
-	flex-direction: column;
-	background-color: var(--primary-light-2);
-	color: var(--primary-dark-1);
-	padding-left: var(--space-large);
-	z-index: 600;
-	border-radius: 20px 20px 20px 20px;
-	box-shadow: var(--elevation-16dp);
-}
-
-.help-overlay-container .title {
-	margin-bottom: var(--space-small);
-}
-
-.close {
-	font-size: 2.5rem;
-	position: absolute;
-	right: 16px;
-	top: 0;
-	cursor: pointer;
+.overlay-content {
+	padding: var(--space-medium) var(--space-large);
+	max-width: 400px;
 }
 
 @media (min-width: 1024px) {
-	.playing {
-		position: relative;
-		display: flex;
-		justify-content: center;
-	}
-	img {
-		width: auto;
-		height: auto;
-		z-index: -1;
-		transform: rotate(-90deg);
-	}
-	.back,
-	.question {
-		transform: rotate(0);
-		font-size: 2.5rem;
-		position: absolute;
-		left: 16px;
-		top: 120px;
-		cursor: pointer;
-		transform: translateX(430px);
-	}
-	.question {
-		left: 60px;
+	.overlay-content {
 	}
 }
