--- a/TP2/src/app/components/pages/search/search.component.css
+++ b/TP2/src/app/components/pages/search/search.component.css
@@ -114,7 +114,7 @@ form {
 }
 
 .form-overlay {
-	background-color: var(--primary);
+	background-color: var(--primary-dark-1);
 	padding: var(--space-x-large) var(--space-medium);
 	position: relative;
 	z-index: 202;
