--- a/TP2/src/app/components/pages/register/register.component.css
+++ b/TP2/src/app/components/pages/register/register.component.css
@@ -1,37 +1,41 @@
 .register-container {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	margin: var(--space-xx-large) 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: var(--space-xx-large) 0;
 }
 
 .register {
-	background-color: rgba(229, 162, 162, 0.9);
-	padding: var(--space-x-large) var(--space-medium);
-	color: var(--black);
-	border-radius: 20px;
+    background-color: rgba(229, 162, 162, 0.9);
+    padding: var(--space-x-large) var(--space-medium);
+    color: var(--black);
+    border-radius: 20px;
 }
 
 .center {
-	text-align: center;
+    text-align: center;
 }
 
 .center h1 {
-	margin-bottom: var(--space-x-small);
+    margin-bottom: var(--space-x-small);
 }
 
 form {
-	margin-top: var(--space-x-large);
-	display: flex;
-	flex-direction: column;
-	gap: var(--space-large);
+    margin-top: var(--space-x-large);
+    display: flex;
+    flex-direction: column;
+    gap: var(--space-large);
 }
 
 .link {
-	cursor: pointer;
-	color: var(--link-dark);
-	text-align: center;
-	margin-top: var(--space-medium);
-	text-decoration: underline;
+    cursor: pointer;
+    color: var(--link-dark);
+    text-align: center;
+    margin-top: var(--space-medium);
+    text-decoration: underline;
+}
+
+.successRegister p {
+    color: var(--secondary-dark-2);
 }
