Added success-message in register, login and profile pages

--- a/TP2/src/app/components/atoms/success-message/success-message.component.css
+++ b/TP2/src/app/components/atoms/success-message/success-message.component.css
@@ -3,6 +3,8 @@ p {
 }
 
 .successMessage {
-    background-color: var(--secondary-dark-1);
+    background-color: var(--secondary-dark-2);
     width: fit-content;
+    padding: 2%;
+    border-radius: 2px;
 }
